docs/api/qiskit/0.24/qiskit.aqua.operators.primitive_ops.PauliOp.mdx
---
title: PauliOp
description: API reference for qiskit.aqua.operators.primitive_ops.PauliOp
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.aqua.operators.primitive_ops.PauliOp
---

<span id="qiskit-aqua-operators-primitive-ops-pauliop" />

# qiskit.aqua.operators.primitive\_ops.PauliOp

<Class id="qiskit.aqua.operators.primitive_ops.PauliOp" isDedicatedPage={true} github="https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.8/qiskit/aqua/operators/primitive_ops/pauli_op.py" signature="PauliOp(primitive, coeff=1.0)">
  Class for Operators backed by Terra’s `Pauli` module.

  **Parameters**

  *   **primitive** (`Pauli`) – The Pauli which defines the behavior of the underlying function.
  *   **coeff** (`Union`\[`int`, `float`, `complex`, `ParameterExpression`]) – A coefficient multiplying the primitive.

  **Raises**

  **TypeError** – invalid parameters.

  ### \_\_init\_\_

  <Function id="qiskit.aqua.operators.primitive_ops.PauliOp.__init__" name="__init__" signature="__init__(primitive, coeff=1.0)">
    **Parameters**

    *   **primitive** (`Pauli`) – The Pauli which defines the behavior of the underlying function.
    *   **coeff** (`Union`\[`int`, `float`, `complex`, `ParameterExpression`]) – A coefficient multiplying the primitive.

    **Raises**

    **TypeError** – invalid parameters.
  </Function>

  ## Methods

  |                                                                                                                                                                    |                                                                                                                                                                               |
  | ------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
  | [`__init__`](#qiskit.aqua.operators.primitive_ops.PauliOp.__init__ "qiskit.aqua.operators.primitive_ops.PauliOp.__init__")(primitive\[, coeff])                    | **type primitive**`Pauli`                                                                                                                                                     |
  | [`add`](#qiskit.aqua.operators.primitive_ops.PauliOp.add "qiskit.aqua.operators.primitive_ops.PauliOp.add")(other)                                                 | Return Operator addition of self and other, overloaded by `+`.                                                                                                                |
  | [`adjoint`](#qiskit.aqua.operators.primitive_ops.PauliOp.adjoint "qiskit.aqua.operators.primitive_ops.PauliOp.adjoint")()                                          | Return a new Operator equal to the Operator’s adjoint (conjugate transpose), overloaded by `~`.                                                                               |
  | [`assign_parameters`](#qiskit.aqua.operators.primitive_ops.PauliOp.assign_parameters "qiskit.aqua.operators.primitive_ops.PauliOp.assign_parameters")(param\_dict) | Binds scalar values to any Terra `Parameters` in the coefficients or primitives of the Operator, or substitutes one `Parameter` for another.                                  |
  | [`bind_parameters`](#qiskit.aqua.operators.primitive_ops.PauliOp.bind_parameters "qiskit.aqua.operators.primitive_ops.PauliOp.bind_parameters")(param\_dict)       | Same as assign\_parameters, but maintained for consistency with QuantumCircuit in Terra (which has both assign\_parameters and bind\_parameters).                             |
  | [`commutes`](#qiskit.aqua.operators.primitive_ops.PauliOp.commutes "qiskit.aqua.operators.primitive_ops.PauliOp.commutes")(other\_op)                              | Returns whether self commutes with other\_op.                                                                                                                                 |
  | [`compose`](#qiskit.aqua.operators.primitive_ops.PauliOp.compose "qiskit.aqua.operators.primitive_ops.PauliOp.compose")(other\[, permutation, front])              | Return Operator Composition between self and other (linear algebra-style: A\@B(x) = A(B(x))), overloaded by `@`.                                                              |
  | [`equals`](#qiskit.aqua.operators.primitive_ops.PauliOp.equals "qiskit.aqua.operators.primitive_ops.PauliOp.equals")(other)                                        | Evaluate Equality between Operators, overloaded by `==`.                                                                                                                      |
  | [`eval`](#qiskit.aqua.operators.primitive_ops.PauliOp.eval "qiskit.aqua.operators.primitive_ops.PauliOp.eval")(\[front])                                           | Evaluate the Operator’s underlying function, either on a binary string or another Operator.                                                                                   |
  | [`exp_i`](#qiskit.aqua.operators.primitive_ops.PauliOp.exp_i "qiskit.aqua.operators.primitive_ops.PauliOp.exp_i")()                                                | Return a `CircuitOp` equivalent to e^-iH for this operator H.                                                                                                                 |
  | [`log_i`](#qiskit.aqua.operators.primitive_ops.PauliOp.log_i "qiskit.aqua.operators.primitive_ops.PauliOp.log_i")(\[massive])                                      | Return a `MatrixOp` equivalent to log(H)/-i for this operator H.                                                                                                              |
  | [`mul`](#qiskit.aqua.operators.primitive_ops.PauliOp.mul "qiskit.aqua.operators.primitive_ops.PauliOp.mul")(scalar)                                                | Returns the scalar multiplication of the Operator, overloaded by `*`, including support for Terra’s `Parameters`, which can be bound to values later (via `bind_parameters`). |
  | [`neg`](#qiskit.aqua.operators.primitive_ops.PauliOp.neg "qiskit.aqua.operators.primitive_ops.PauliOp.neg")()                                                      | Return the Operator’s negation, effectively just multiplying by -1.0, overloaded by `-`.                                                                                      |
  | [`permute`](#qiskit.aqua.operators.primitive_ops.PauliOp.permute "qiskit.aqua.operators.primitive_ops.PauliOp.permute")(permutation)                               | Permutes the sequence of Pauli matrices.                                                                                                                                      |
  | [`power`](#qiskit.aqua.operators.primitive_ops.PauliOp.power "qiskit.aqua.operators.primitive_ops.PauliOp.power")(exponent)                                        | Return Operator composed with self multiple times, overloaded by `**`.                                                                                                        |
  | [`primitive_strings`](#qiskit.aqua.operators.primitive_ops.PauliOp.primitive_strings "qiskit.aqua.operators.primitive_ops.PauliOp.primitive_strings")()            | Return a set of strings describing the primitives contained in the Operator.                                                                                                  |
  | [`reduce`](#qiskit.aqua.operators.primitive_ops.PauliOp.reduce "qiskit.aqua.operators.primitive_ops.PauliOp.reduce")()                                             | Try collapsing the Operator structure, usually after some type of conversion, e.g.                                                                                            |
  | [`tensor`](#qiskit.aqua.operators.primitive_ops.PauliOp.tensor "qiskit.aqua.operators.primitive_ops.PauliOp.tensor")(other)                                        | Return tensor product between self and other, overloaded by `^`.                                                                                                              |
  | [`tensorpower`](#qiskit.aqua.operators.primitive_ops.PauliOp.tensorpower "qiskit.aqua.operators.primitive_ops.PauliOp.tensorpower")(other)                         | Return tensor product with self multiple times, overloaded by `^`.                                                                                                            |
  | [`to_circuit`](#qiskit.aqua.operators.primitive_ops.PauliOp.to_circuit "qiskit.aqua.operators.primitive_ops.PauliOp.to_circuit")()                                 | Returns a `QuantumCircuit` equivalent to this Operator.                                                                                                                       |
  | [`to_circuit_op`](#qiskit.aqua.operators.primitive_ops.PauliOp.to_circuit_op "qiskit.aqua.operators.primitive_ops.PauliOp.to_circuit_op")()                        | Returns a `CircuitOp` equivalent to this Operator.                                                                                                                            |
  | [`to_instruction`](#qiskit.aqua.operators.primitive_ops.PauliOp.to_instruction "qiskit.aqua.operators.primitive_ops.PauliOp.to_instruction")()                     | Returns an `Instruction` equivalent to this Operator.                                                                                                                         |
  | [`to_legacy_op`](#qiskit.aqua.operators.primitive_ops.PauliOp.to_legacy_op "qiskit.aqua.operators.primitive_ops.PauliOp.to_legacy_op")(\[massive])                 | Attempt to return the Legacy Operator representation of the Operator.                                                                                                         |
  | [`to_matrix`](#qiskit.aqua.operators.primitive_ops.PauliOp.to_matrix "qiskit.aqua.operators.primitive_ops.PauliOp.to_matrix")(\[massive])                          | Return NumPy representation of the Operator.                                                                                                                                  |
  | [`to_matrix_op`](#qiskit.aqua.operators.primitive_ops.PauliOp.to_matrix_op "qiskit.aqua.operators.primitive_ops.PauliOp.to_matrix_op")(\[massive])                 | Returns a `MatrixOp` equivalent to this Operator.                                                                                                                             |
  | [`to_pauli_op`](#qiskit.aqua.operators.primitive_ops.PauliOp.to_pauli_op "qiskit.aqua.operators.primitive_ops.PauliOp.to_pauli_op")(\[massive])                    | Returns a sum of `PauliOp` s equivalent to this Operator.                                                                                                                     |
  | [`to_spmatrix`](#qiskit.aqua.operators.primitive_ops.PauliOp.to_spmatrix "qiskit.aqua.operators.primitive_ops.PauliOp.to_spmatrix")()                              | Returns SciPy sparse matrix representation of the Operator.                                                                                                                   |

  ## Attributes

  |                                                                                                                                  |                                                                 |
  | -------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------- |
  | `INDENTATION`                                                                                                                    |                                                                 |
  | [`coeff`](#qiskit.aqua.operators.primitive_ops.PauliOp.coeff "qiskit.aqua.operators.primitive_ops.PauliOp.coeff")                | The scalar coefficient multiplying the Operator.                |
  | [`num_qubits`](#qiskit.aqua.operators.primitive_ops.PauliOp.num_qubits "qiskit.aqua.operators.primitive_ops.PauliOp.num_qubits") | The number of qubits over which the Operator is defined.        |
  | [`parameters`](#qiskit.aqua.operators.primitive_ops.PauliOp.parameters "qiskit.aqua.operators.primitive_ops.PauliOp.parameters") | Return a set of Parameter objects contained in the Operator.    |
  | [`primitive`](#qiskit.aqua.operators.primitive_ops.PauliOp.primitive "qiskit.aqua.operators.primitive_ops.PauliOp.primitive")    | The primitive defining the underlying function of the Operator. |

  ### add

  <Function id="qiskit.aqua.operators.primitive_ops.PauliOp.add" name="add" signature="add(other)">
    Return Operator addition of self and other, overloaded by `+`.

    **Parameters**

    **other** (`OperatorBase`) – An `OperatorBase` with the same number of qubits as self, and in the same ‘Operator’, ‘State function’, or ‘Measurement’ category as self (i.e. the same type of underlying function).

    **Return type**

    `OperatorBase`

    **Returns**

    An `OperatorBase` equivalent to the sum of self and other.
  </Function>

  ### adjoint

  <Function id="qiskit.aqua.operators.primitive_ops.PauliOp.adjoint" name="adjoint" signature="adjoint()">
    Return a new Operator equal to the Operator’s adjoint (conjugate transpose), overloaded by `~`. For StateFns, this also turns the StateFn into a measurement.

    **Return type**

    `OperatorBase`

    **Returns**

    An `OperatorBase` equivalent to the adjoint of self.
  </Function>

  ### assign\_parameters

  <Function id="qiskit.aqua.operators.primitive_ops.PauliOp.assign_parameters" name="assign_parameters" signature="assign_parameters(param_dict)">
    Binds scalar values to any Terra `Parameters` in the coefficients or primitives of the Operator, or substitutes one `Parameter` for another. This method differs from Terra’s `assign_parameters` in that it also supports lists of values to assign for a give `Parameter`, in which case self will be copied for each parameterization in the binding list(s), and all the copies will be returned in an `OpList`. If lists of parameterizations are used, every `Parameter` in the param\_dict must have the same length list of parameterizations.

    **Parameters**

    **param\_dict** (`dict`) – The dictionary of `Parameters` to replace, and values or lists of values by which to replace them.

    **Return type**

    `OperatorBase`

    **Returns**

    The `OperatorBase` with the `Parameters` in self replaced by the values or `Parameters` in param\_dict. If param\_dict contains parameterization lists, this `OperatorBase` is an `OpList`.
  </Function>

  ### bind\_parameters

  <Function id="qiskit.aqua.operators.primitive_ops.PauliOp.bind_parameters" name="bind_parameters" signature="bind_parameters(param_dict)">
    Same as assign\_parameters, but maintained for consistency with QuantumCircuit in Terra (which has both assign\_parameters and bind\_parameters).

    **Return type**

    `OperatorBase`
  </Function>

  ### coeff

  <Function id="qiskit.aqua.operators.primitive_ops.PauliOp.coeff" name="coeff" signature="property coeff">
    The scalar coefficient multiplying the Operator.

    **Return type**

    `Union`\[`int`, `float`, `complex`, `ParameterExpression`]

    **Returns**

    The coefficient.
  </Function>

  ### commutes

  <Function id="qiskit.aqua.operators.primitive_ops.PauliOp.commutes" name="commutes" signature="commutes(other_op)">
    Returns whether self commutes with other\_op.

    **Parameters**

    **other\_op** (`OperatorBase`) – An `OperatorBase` with which to evaluate whether self commutes.

    **Return type**

    `bool`

    **Returns**

    A bool equaling whether self commutes with other\_op
  </Function>

  ### compose

  <Function id="qiskit.aqua.operators.primitive_ops.PauliOp.compose" name="compose" signature="compose(other, permutation=None, front=False)">
    Return Operator Composition between self and other (linear algebra-style: A\@B(x) = A(B(x))), overloaded by `@`.

    Note: You must be conscious of Quantum Circuit vs. Linear Algebra ordering conventions. Meaning, X.compose(Y) produces an X∘Y on qubit 0, but would produce a QuantumCircuit which looks like

    > -\[Y]-\[X]-

    Because Terra prints circuits with the initial state at the left side of the circuit.

    **Parameters**

    *   **other** (`OperatorBase`) – The `OperatorBase` with which to compose self.
    *   **permutation** (`Optional`\[`List`\[`int`]]) – `List[int]` which defines permutation on other operator.
    *   **front** (`bool`) – If front==True, return `other.compose(self)`.

    **Return type**

    `OperatorBase`

    **Returns**

    An `OperatorBase` equivalent to the function composition of self and other.
  </Function>

  ### equals

  <Function id="qiskit.aqua.operators.primitive_ops.PauliOp.equals" name="equals" signature="equals(other)">
    Evaluate Equality between Operators, overloaded by `==`. Only returns True if self and other are of the same representation (e.g. a DictStateFn and CircuitStateFn will never be equal, even if their vector representations are equal), their underlying primitives are equal (this means for ListOps, OperatorStateFns, or EvolvedOps the equality is evaluated recursively downwards), and their coefficients are equal.

    **Parameters**

    **other** (`OperatorBase`) – The `OperatorBase` to compare to self.

    **Return type**

    `bool`

    **Returns**

    A bool equal to the equality of self and other.
  </Function>

  ### eval

  <Function id="qiskit.aqua.operators.primitive_ops.PauliOp.eval" name="eval" signature="eval(front=None)">
    Evaluate the Operator’s underlying function, either on a binary string or another Operator. A square binary Operator can be defined as a function taking a binary function to another binary function. This method returns the value of that function for a given StateFn or binary string. For example, `op.eval('0110').eval('1110')` can be seen as querying the Operator’s matrix representation by row 6 and column 14, and will return the complex value at those “indices.” Similarly for a StateFn, `op.eval('1011')` will return the complex value at row 11 of the vector representation of the StateFn, as all StateFns are defined to be evaluated from Zero implicitly (i.e. it is as if `.eval('0000')` is already called implicitly to always “indexing” from column 0).

    If `front` is None, the matrix-representation of the operator is returned.

    **Parameters**

    **front** (`Union`\[`str`, `Dict`\[`str`, `complex`], `ndarray`, `OperatorBase`, `None`]) – The bitstring, dict of bitstrings (with values being coefficients), or StateFn to evaluated by the Operator’s underlying function, or None.

    **Return type**

    `Union`\[`OperatorBase`, `float`, `complex`]

    **Returns**

    The output of the Operator’s evaluation function. If self is a `StateFn`, the result is a float or complex. If self is an Operator (`PrimitiveOp, ComposedOp, SummedOp, EvolvedOp,` etc.), the result is a StateFn. If `front` is None, the matrix-representation of the operator is returned, which is a `MatrixOp` for the operators and a `VectorStateFn` for state-functions. If either self or front contain proper `ListOps` (not ListOp subclasses), the result is an n-dimensional list of complex or StateFn results, resulting from the recursive evaluation by each OperatorBase in the ListOps.
  </Function>

  ### exp\_i

  <Function id="qiskit.aqua.operators.primitive_ops.PauliOp.exp_i" name="exp_i" signature="exp_i()">
    Return a `CircuitOp` equivalent to e^-iH for this operator H.

    **Return type**

    `OperatorBase`
  </Function>

  ### log\_i

  <Function id="qiskit.aqua.operators.primitive_ops.PauliOp.log_i" name="log_i" signature="log_i(massive=False)">
    Return a `MatrixOp` equivalent to log(H)/-i for this operator H. This function is the effective inverse of exp\_i, equivalent to finding the Hermitian Operator which produces self when exponentiated.

    **Return type**

    `OperatorBase`
  </Function>

  ### mul

  <Function id="qiskit.aqua.operators.primitive_ops.PauliOp.mul" name="mul" signature="mul(scalar)">
    Returns the scalar multiplication of the Operator, overloaded by `*`, including support for Terra’s `Parameters`, which can be bound to values later (via `bind_parameters`).

    **Parameters**

    **scalar** (`Union`\[`int`, `float`, `complex`, `ParameterExpression`]) – The real or complex scalar by which to multiply the Operator, or the `ParameterExpression` to serve as a placeholder for a scalar factor.

    **Return type**

    `OperatorBase`

    **Returns**

    An `OperatorBase` equivalent to product of self and scalar.
  </Function>

  ### neg

  <Function id="qiskit.aqua.operators.primitive_ops.PauliOp.neg" name="neg" signature="neg()">
    Return the Operator’s negation, effectively just multiplying by -1.0, overloaded by `-`.

    **Return type**

    `OperatorBase`

    **Returns**

    An `OperatorBase` equivalent to the negation of self.
  </Function>

  ### num\_qubits

  <Function id="qiskit.aqua.operators.primitive_ops.PauliOp.num_qubits" name="num_qubits" signature="property num_qubits">
    The number of qubits over which the Operator is defined. If `op.num_qubits == 5`, then `op.eval('1' * 5)` will be valid, but `op.eval('11')` will not.

    **Return type**

    `int`

    **Returns**

    The number of qubits accepted by the Operator’s underlying function.
  </Function>

  ### parameters

  <Function id="qiskit.aqua.operators.primitive_ops.PauliOp.parameters" name="parameters" signature="property parameters">
    Return a set of Parameter objects contained in the Operator.
  </Function>

  ### permute

  <Function id="qiskit.aqua.operators.primitive_ops.PauliOp.permute" name="permute" signature="permute(permutation)">
    Permutes the sequence of Pauli matrices.

    **Parameters**

    **permutation** (`List`\[`int`]) – A list defining where each Pauli should be permuted. The Pauli at index j of the primitive should be permuted to position permutation\[j].

    **Return type**

    `PauliOp`

    **Returns**

    A new PauliOp representing the permuted operator. For operator (X ^ Y ^ Z) and indices=\[1,2,4], it returns (X ^ I ^ Y ^ Z ^ I).

    **Raises**

    [**AquaError**](qiskit.aqua.AquaError "qiskit.aqua.AquaError") – if indices do not define a new index for each qubit.
  </Function>

  ### power

  <Function id="qiskit.aqua.operators.primitive_ops.PauliOp.power" name="power" signature="power(exponent)">
    Return Operator composed with self multiple times, overloaded by `**`.

    **Parameters**

    **exponent** (`int`) – The int number of times to compose self with itself.

    **Return type**

    `OperatorBase`

    **Returns**

    An `OperatorBase` equivalent to self composed with itself exponent times.
  </Function>

  ### primitive

  <Function id="qiskit.aqua.operators.primitive_ops.PauliOp.primitive" name="primitive" signature="property primitive">
    The primitive defining the underlying function of the Operator.

    **Return type**

    `Union`\[`Instruction`, `QuantumCircuit`, `List`, `ndarray`, `spmatrix`, `Operator`, `Pauli`]

    **Returns**

    The primitive object.
  </Function>

  ### primitive\_strings

  <Function id="qiskit.aqua.operators.primitive_ops.PauliOp.primitive_strings" name="primitive_strings" signature="primitive_strings()">
    Return a set of strings describing the primitives contained in the Operator. For example, `{'QuantumCircuit', 'Pauli'}`. For hierarchical Operators, such as `ListOps`, this can help illuminate the primitives represented in the various recursive levels, and therefore which conversions can be applied.

    **Return type**

    `Set`\[`str`]

    **Returns**

    A set of strings describing the primitives contained within the Operator.
  </Function>

  ### reduce

  <Function id="qiskit.aqua.operators.primitive_ops.PauliOp.reduce" name="reduce" signature="reduce()">
    Try collapsing the Operator structure, usually after some type of conversion, e.g. trying to add Operators in a SummedOp or delete needless IGates in a CircuitOp. If no reduction is available, just returns self.

    **Return type**

    `OperatorBase`

    **Returns**

    The reduced `OperatorBase`.
  </Function>

  ### tensor

  <Function id="qiskit.aqua.operators.primitive_ops.PauliOp.tensor" name="tensor" signature="tensor(other)">
    Return tensor product between self and other, overloaded by `^`. Note: You must be conscious of Qiskit’s big-endian bit printing convention. Meaning, X.tensor(Y) produces an X on qubit 0 and an Y on qubit 1, or X⨂Y, but would produce a QuantumCircuit which looks like

    > -\[Y]- -\[X]-

    Because Terra prints circuits and results with qubit 0 at the end of the string or circuit.

    **Parameters**

    **other** (`OperatorBase`) – The `OperatorBase` to tensor product with self.

    **Return type**

    `OperatorBase`

    **Returns**

    An `OperatorBase` equivalent to the tensor product of self and other.
  </Function>

  ### tensorpower

  <Function id="qiskit.aqua.operators.primitive_ops.PauliOp.tensorpower" name="tensorpower" signature="tensorpower(other)">
    Return tensor product with self multiple times, overloaded by `^`.

    **Parameters**

    **other** (`int`) – The int number of times to tensor product self with itself via `tensorpower`.

    **Return type**

    `Union`\[`OperatorBase`, `int`]

    **Returns**

    An `OperatorBase` equivalent to the tensorpower of self by other.
  </Function>

  ### to\_circuit

  <Function id="qiskit.aqua.operators.primitive_ops.PauliOp.to_circuit" name="to_circuit" signature="to_circuit()">
    Returns a `QuantumCircuit` equivalent to this Operator.

    **Return type**

    `QuantumCircuit`
  </Function>

  ### to\_circuit\_op

  <Function id="qiskit.aqua.operators.primitive_ops.PauliOp.to_circuit_op" name="to_circuit_op" signature="to_circuit_op()">
    Returns a `CircuitOp` equivalent to this Operator.

    **Return type**

    `OperatorBase`
  </Function>

  ### to\_instruction

  <Function id="qiskit.aqua.operators.primitive_ops.PauliOp.to_instruction" name="to_instruction" signature="to_instruction()">
    Returns an `Instruction` equivalent to this Operator.

    **Return type**

    `Instruction`
  </Function>

  ### to\_legacy\_op

  <Function id="qiskit.aqua.operators.primitive_ops.PauliOp.to_legacy_op" name="to_legacy_op" signature="to_legacy_op(massive=False)">
    Attempt to return the Legacy Operator representation of the Operator. If self is a `SummedOp` of `PauliOps`, will attempt to convert to `WeightedPauliOperator`, and otherwise will simply convert to `MatrixOp` and then to `MatrixOperator`. The Legacy Operators cannot represent `StateFns` or proper `ListOps` (meaning not one of the `ListOp` subclasses), so an error will be thrown if this method is called on such an Operator. Also, Legacy Operators cannot represent unbound Parameter coeffs, so an error will be thrown if any are present in self.

    Warn if more than 16 qubits to force having to set `massive=True` if such a large vector is desired.

    **Return type**

    `WeightedPauliOperator`

    **Returns**

    The `LegacyBaseOperator` representing this Operator.

    **Raises**

    **TypeError** – self is an Operator which cannot be represented by a `LegacyBaseOperator`, such as `StateFn`, proper (non-subclass) `ListOp`, or an Operator with an unbound coeff Parameter.
  </Function>

  ### to\_matrix

  <Function id="qiskit.aqua.operators.primitive_ops.PauliOp.to_matrix" name="to_matrix" signature="to_matrix(massive=False)">
    Return NumPy representation of the Operator. Represents the evaluation of the Operator’s underlying function on every combination of basis binary strings. Warn if more than 16 qubits to force having to set `massive=True` if such a large vector is desired.

    **Return type**

    `ndarray`

    **Returns**

    The NumPy `ndarray` equivalent to this Operator.
  </Function>

  ### to\_matrix\_op

  <Function id="qiskit.aqua.operators.primitive_ops.PauliOp.to_matrix_op" name="to_matrix_op" signature="to_matrix_op(massive=False)">
    Returns a `MatrixOp` equivalent to this Operator.

    **Return type**

    `OperatorBase`
  </Function>

  ### to\_pauli\_op

  <Function id="qiskit.aqua.operators.primitive_ops.PauliOp.to_pauli_op" name="to_pauli_op" signature="to_pauli_op(massive=False)">
    Returns a sum of `PauliOp` s equivalent to this Operator.

    **Return type**

    `OperatorBase`
  </Function>

  ### to\_spmatrix

  <Function id="qiskit.aqua.operators.primitive_ops.PauliOp.to_spmatrix" name="to_spmatrix" signature="to_spmatrix()">
    Returns SciPy sparse matrix representation of the Operator.

    **Return type**

    `spmatrix`

    **Returns**

    CSR sparse matrix representation of the Operator.

    **Raises**

    **ValueError** – invalid parameters.
  </Function>
</Class>

